# agent-scorecard

./: README.md  action.yml  pyproject.toml
.github/workflows/: scorecard.yml  test.yml
docs/: evaluation-inputs.md  github-action.md  hermes-session-import.md  scorecard-standard.md  scoring-anatomy.md  trace-schema.md
examples/reports/: README.md  bad_busywork_task.md  delegation-policy.html  delegation-policy.md  evidence-intake.html  failure-replay.html  hermes_session_sanitized.md  index.json  index.md  portfolio-viewer.html  scoring-dimensions.html  trace-walkthrough.html  trust-contract.html
examples/traces/: bad_busywork_task.jsonl  good_obsidian_task.jsonl  hermes_session_sanitized.jsonl
src/agent_scorecard/: anatomy.py  cli.py  core.py  hermes_import.py  report.py
tests/: test_anatomy.py  test_scorecard.py  test_static_viewer.py
tests/fixtures/: hermes_session_sanitized.json
